# odoolv

./: LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.cfg  setup.py
odoolv/: module.py
odoolv.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
odoolv/css/: styles.css
odoolv/html/: index.html
odoolv/js/: log.js
