[metadata]
name = odoolv
version = 1.0.0
author = Arash Homayounfar
author_email = homayounfar@msn.com
description = view odoo logs on a http server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odoo-app-dev/odoolv
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[egg_info]
tag_build = 
tag_date = 0

